apps/docs/flux/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: docs-egress-restricted
spec:
  endpointSelector:
    matchLabels:
      app: docs
  egress: []
